# agent-reasoning

./: .env.example  .gitignore  README.md  pyproject.toml
agent_reasoning/: __init__.py  context.py  evaluation.py  models.py
agent_reasoning/cli/: clone_repos.py  evaluate.py
notebooks/: 2025-01-20-deepseek.ipynb  2025-01-20-o1.ipynb  2025-01-22-gemini-thinking.ipynb  2025-01-25-file-tree.ipynb  2025-01-25-metrics.ipynb  2025-01-25-o1-one-shot.ipynb  2025-01-25-parse-swe-bench.ipynb
